# rust-stm32-app

./: Cargo.toml  README.md  build.rs  script.ld  sync.s
.cargo/: config
src/: init.rs  init.s  log.rs  main.rs  mem.rs  reg.rs  regop.rs  sync.rs  sync.s  tim.rs
src/periph/: gpio.rs  mod.rs  pendsv.rs  rcc.rs  systick.rs  tim14.rs  usart.rs
src/thread/: mod.rs  sync.rs  sync.s  task.rs  task.s
