[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0.73"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"

[dependencies]
paste = "1.0.7"
rust_stm32 = {path = "../rust_stm32"}
